# PARALLAX

./: .gitignore  Execution master.c  Makefile  local_state.h  main.c  master_servant.c  master_servant.h  mul_add_task.c  request_handler.c  submit_annotated.c  submit_annotated.c_parsed.c  submit_task.c  test_client.c  test_nodes_client  test_nodes_client.c
Agent_Init/: init.c  init.h
Execution_Master/: Makefile  fix_master.sh  test_master_exec.c  test_mock_worker.c  test_prog_client.c  test_send_c_code.c
Execution_Worker/: logic.c  logic.h  test_client2  test_client2.c  test_worker_node  test_worker_node.c  worker_exec  worker_exec.c  worker_exec.h
Monitoring/: Monitoring.c  Monitoring.h  main.c  monitoring_linux.c  monitoring_macos.c  monitoring_windows.c  test_monitoring
Parser/: CMakeLists.txt  parser.cpp
Parser/Tests/: find_max.c  find_max.c_parsed.c  parallax_debug.c  parallax_run_local.c  submit_annotated.c  submit_annotated.c_parsed.c  test.c  test.c_parsed.c
Receptionnist/: .receptionist_uuid  Makefile  reception.c  reception.h  receptionist
Testing2/: main  main.c  sender.c  tool.cpp
Worker_execution_Module/: fonctions.c  worker  worker-execution.c  worker.c
execution_master/: Makefile  README.md  em_combiner.c  em_combiner.h  em_ipc.c  em_ipc.h  em_parser.c  em_parser.h  em_types.h  execution_master  execution_master.c  execution_master.h  main.c
network-thread/: Makefile  ms_queue.c  (+16 more)
test/: CMakeLists.txt  first  first.cpp  main  main.c  sender  sender.c  tool.cpp
test/buil/: CMakeCache.txt  Makefile  cmake_install.cmake  test.c
(+85 files in other folders)
